# texas-holdem-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
api/: Cargo.toml
api/src/: main.rs
api/src/star_wars/: mod.rs  model.rs
api/src/table/: mod.rs
deal/: Cargo.toml  builder.py
deal/deuces3/: README.md  __init__.py  card.py  cards.py  deck.py  evaluator.py  lookup.py
